layout issues

--- a/web/style/vrijwilligt.less
+++ b/web/style/vrijwilligt.less
@@ -577,6 +577,12 @@ h3 {.grijzetitel(); }
 		}
 		.frm_vacancy_renumeration .vals input {margin-left: 10px; }
 		.submits>div {float: left; }
+		.doetest {margin: 25px; text-align: center; }
+		.search {
+			text-align: center;
+			.searchq {width: 70%; display: inline-block; padding: 15px; }
+			.dosearch {width: 150px; display: inline-block; .schaduwblok(@cRood); padding: 15px 5px 11px; margin-left: 10px; color: white; }
+		}
 	}
 	#person_skills, #edit_person_skills, #organisation_sectors, #vacancy_skills {
 		.flex-display(flex); .flex-flow(row wrap);
